@@ -144,13 +144,13 @@ generated by the footnotes: first_, second_, third_.
     <paragraph>
         Here are some internal cross-references to the implicit targets
         generated by the footnotes: \n\
-        <reference refname="first">
+        <reference name="first" refname="first">
             first
         , \n\
-        <reference refname="second">
+        <reference name="second" refname="second">
             second
         , \n\
-        <reference refname="third">
+        <reference name="third" refname="third">
             third
         .
 """],
